@@ -2,6 +2,7 @@
 	bugfix: fix auth headers in upgrade script (broken in 0.15.0)
 	new feature: fetch switch serial number via SNMP (by killsystem)
 	new feature: adding multiple racks
+	new feature: IP address reservation release on allocation
 	updates: user interface cleanups
 0.15.0 2008-05-10
 	new feature: tags
